--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
     <title>Tic Tac Toe Game</title>
 </head>
 <body>
-
-    <h1>Hello</h1>
+    <div class="board">
+        <div class="board-field" id="00"></div>
+        <div class="board-field" id="01"></div>
+        <div class="board-field" id="02"></div>
+        <div class="board-field" id="10"></div>
+        <div class="board-field" id="11"></div>
+        <div class="board-field" id="12"></div>
+        <div class="board-field" id="20"></div>
+        <div class="board-field" id="21"></div>
+        <div class="board-field" id="22"></div>
+    </div>
 
 </body>
 </html>
