--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Tic Tac Toe Game</title>
 </head>
 <body>
+    <div class="display-turn">X is playing!</div>
     <div class="board">
         <div class="board-field" id="0"></div>
         <div class="board-field" id="1"></div>
@@ -19,6 +20,8 @@
         <div class="board-field" id="7"></div>
         <div class="board-field" id="8"></div>
     </div>
-
+    <div class="reset">
+        <button id="reset-btn">Reset</button>
+    </div>
 </body>
 </html>
