--- a/index.html
+++ b/index.html
@@ -8,20 +8,25 @@
     <title>Tic Tac Toe Game</title>
 </head>
 <body>
-    <div class="display-turn">X is playing!</div>
-    <div class="board">
-        <div class="board-field" id="0"></div>
-        <div class="board-field" id="1"></div>
-        <div class="board-field" id="2"></div>
-        <div class="board-field" id="3"></div>
-        <div class="board-field" id="4"></div>
-        <div class="board-field" id="5"></div>
-        <div class="board-field" id="6"></div>
-        <div class="board-field" id="7"></div>
-        <div class="board-field" id="8"></div>
-    </div>
-    <div class="reset">
-        <button id="reset-btn">Reset</button>
+    <div class="container">
+        <h1>TIC-TAC-TOE!</h1>
+        <div class="game-board">
+            <div class="display">X is playing!</div>
+            <div class="board">
+                <div class="board-field" id="0"></div>
+                <div class="board-field" id="1"></div>
+                <div class="board-field" id="2"></div>
+                <div class="board-field" id="3"></div>
+                <div class="board-field" id="4"></div>
+                <div class="board-field" id="5"></div>
+                <div class="board-field" id="6"></div>
+                <div class="board-field" id="7"></div>
+                <div class="board-field" id="8"></div>
+            </div>
+        </div>
+        <div class="reset">
+            <button id="reset-btn">Restart</button>
+        </div>
     </div>
 </body>
 </html>
