code refactoring pt1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./script.js" defer></script>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Tic Tac Toe Game</title>
 </head>
 <body>
@@ -26,6 +27,10 @@
         </div>
         <div class="reset">
             <button id="reset-btn">Restart</button>
+        </div>
+        <div class="find-me">
+            <p> Built and designed by pvdevs</p>
+            <a href="https://github.com/pvdevs" target="_blank"><i class="fa fa-github" style="font-size:32px"></i></a>
         </div>
     </div>
 </body>
